--- a/functions/package.json
+++ b/functions/package.json
@@ -23,5 +23,9 @@
   "devDependencies": {
     "firebase-functions-test": "^3.2.0"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "**/@grpc/grpc-js": "latest",
+    "**/braces": "latest"
+  }
 }
