--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,8 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "preinstall": "npx npm-force-resolutions"
   },
   "engines": {
     "node": "18"
@@ -18,14 +19,16 @@
     "express": "^4.18.2",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.1",
-    "openai": "^4.23.0"
+    "openai": "^4.23.0",
+    "@grpc/grpc-js": ">=1.10.9",
+    "braces": ">=3.0.3"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.2.0"
   },
   "private": true,
   "resolutions": {
-    "**/@grpc/grpc-js": "latest",
-    "**/braces": "latest"
+    "**/@grpc/grpc-js": ">=1.10.9",
+    "**/braces": ">=3.0.3"
   }
 }
