Still npm fixes.

--- a/functions/package.json
+++ b/functions/package.json
@@ -28,7 +28,7 @@
   },
   "private": true,
   "resolutions": {
-    "**/@grpc/grpc-js": ">=1.10.9",
+    "**/google-gax/@grpc/grpc-js": ">=1.10.9",
     "**/braces": ">=3.0.3"
   }
 }
