--- a/functions/package.json
+++ b/functions/package.json
@@ -14,14 +14,14 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@grpc/grpc-js": ">=1.10.9",
     "body-parser": "^1.20.2",
+    "braces": ">=3.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.1",
-    "openai": "^4.23.0",
-    "@grpc/grpc-js": ">=1.10.9",
-    "braces": ">=3.0.3"
+    "firebase-functions": "^5.1.1",
+    "openai": "^4.23.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.2.0"
